--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,14 @@ det_model_checkpoint: /vtti/scratch/mmdetection/trained_models/shrp2_original_sp
 det_model_classes: /vtti/scratch/mmdetection/classes/classes_shrp2_extra.txt
 det_model_config: /vtti/scratch/mmdetection/custom_configs/shrp2+extra/cascade_rcnn_r101_fpn_dconv_c3-c5_1x_coco.py
 det_model_threshold: 0.5
-dist: 480
-f_pitch: -0.04
-f_yaw: 0.15
-front_pitch: -0.4002903467336685
-front_yaw: 0.03331920100502517
+dist: 1320
+f_pitch: 0
+f_yaw: 0
+front_pitch: -0.02227941620535548
+front_yaw: -0.33525447432179787
 gpu: 1
-old_front_pitch: -0.6602958140703518
-old_front_yaw: -2.234137050251256
+old_front_pitch: 0
+old_front_yaw: 0
 seg_confidence_threshold: 0.5
 seg_config_file: configs/COCO-PanopticSegmentation/panoptic_fpn_R_101_3x.yaml
 seg_opts:
